--- a/src/components/shared/project.json
+++ b/src/components/shared/project.json
@@ -14,6 +14,10 @@
       "type": "text",
       "required": true
     },
+    "teksti": {
+      "type": "text",
+      "required": true
+    },
     "kuvat": {
       "type": "media",
       "multiple": true,
@@ -29,6 +33,11 @@
       "allowedTypes": [
         "images"
       ]
+    },
+    "url": {
+      "type": "string",
+      "required": true,
+      "unique": true
     }
   },
   "config": {}
